--- a/style.css
+++ b/style.css
@@ -5,8 +5,6 @@ html {
 }
 
 body {
-  /* display: flex;
-  flex-direction: column; */
   font-family: "Roboto", sans-serif;
   height: 100%;
   margin: 0;
@@ -227,12 +225,11 @@ a {
   width: 100%;
   padding-top: 160px;
   height: 450px;
-  background: url(../img/uvod_1.jpg) no-repeat;
+  background: url(/img/uvod.jpg) no-repeat;
   background-attachment: fixed;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  /* background-position: center; */
 
 }
 
