--- a/style.css
+++ b/style.css
@@ -225,7 +225,7 @@ a {
   width: 100%;
   padding-top: 160px;
   height: 450px;
-  background: url(/img/himalayas-2301040_1280.jpg) no-repeat;
+  background: url(../img/main.jpg) no-repeat;
   background-attachment: fixed;
   background-position: center;
   background-repeat: no-repeat;
