--- a/style.css
+++ b/style.css
@@ -335,26 +335,27 @@ form input:hover {
 .square {
   display: flex;
   flex-wrap: wrap;
-  gap: 10px;
+  gap: 15px;
   align-items: center;
   padding-bottom: 50px;
 }
 
 .square-text {
-  width: 260px;
+  width: 270px;
   height: 240px;
   background: rgba(14, 37, 203, 0.3);
   color: #fff;
 }
 
-.text h3 {
+.square-text h3 {
   margin: 10px;
   margin-bottom: 15px;
 }
 
-.text p {
+.square-text p {
   padding: 0 10px 0 10px;
   font-size: 18px;
+  line-height: 1.7rem;
 }
 
 #item5 {
